Finished initial HTML and CSS styling

--- a/index.html
+++ b/index.html
@@ -8,5 +8,29 @@
     <script src="script.js"></script>
 </head>
 <body>
+    <div class="outer-container">
+        <div class="title-block">
+
+        </div>
+
+        <div class="calculator-block">
+            <div class="calculator-field">
+                <h3>Race Length (in minutes)</h3>
+                <input class="calc-input" type="number">
+            </div>         
+            <div class="calculator-field">
+                <h3>Lap Time</h3>
+                <div class="form-inline">
+                    <input placeholder="Min" type="number" class="calc-input" min="0" max="59">
+                    <span class="input-comma">:</span>
+                    <input placeholder="Sec" type="number" class="calc-input" min="0" max="59">
+                </div>
+            </div>         
+            <div class="calculator-field">
+                <h3>Fuel Per Lap</h3>
+                <input class="calc-input" type="number">
+            </div>         
+        </div>
+    </div>
 </body>
 </html>
